compiler/test_files/typing/good/testfile-type-access-before-decl.psc
Point var;

class Point{
    f32 x;
    f32 y;
}