compiler/test_files/typing/bad/testfile-redef-8.psc
class S {
  i32 a;
};

i32 main() {
  i32 x;
  S x;
}
